# cctiles

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: pty_claude.rs  pty_input.rs  pty_spawn.rs
src/: activity.rs  config.rs  git_info.rs  hooks.rs  main.rs  session.rs  transcript.rs
