[package]
name = "cctiles"
version = "0.1.0"
edition = "2024"
description = "A TUI app for running and monitoring multiple Claude Code CUI sessions in parallel"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WaTeR-7/cctiles"
readme = "README.md"
keywords = ["cli", "tui", "claude", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.3", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
notify = "8.2.0"
portable-pty = "0.9.0"
ratatui = "0.30.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tiny_http = "0.12.0"
toml = "1.1.3"
vt100 = "0.16.2"
